[package]
name = "sorted"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
description = "Collection of common sorting algorithms."
homepage = "https://github.com/victor-iyi/sorted"
repository = "https://github.com/victor-iyi/sorted"
keywords = ["sort", "algorithm"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorted"

[dev-dependencies]
pretty_assertions = "1.0.0"
