[package]
name = "sorted-python"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sorted"
crate-type = ["cdylib"]

[dependencies.sorted]
version = "*"
path = "../../"

[dependencies]
pyo3 = "0.12"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
