[package]
name = "sorted-python"
version = "0.1.0"
authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
edition = "2018"

[package.metadata.maturin]
python-source = "sorted"
classifier = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating Sytem :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Rust",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorted"
crate-type = ["cdylib"]


[dependencies]
sorted = { path = "../../" }
pyo3 = { version = "0.15.0", features = ["extension-module"] }
