[metdata]
name = sorted
version = 0.1.0
description = Collection of sorting algorithms.
author = Victor I. Afolabi
author_email = javafolabi@gmail.com
url = https://github.com/victor-yi/sorted
license = Apache License 2.0
long_description = find: README.md
long_description_content_type = text/markdown
keywords = rust, sort, algorithms
classifiers=
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: Cpython
  Programming Language :: Python :: Implementation :: PyPy
  Programming Language :: Rust

[options]
packages = find:
zip_safe = True

[options.package_data]
sorted =
  py.typed
  "*.pyi"
